==> HahaXiong0204/project/新集成的模板/NET/ESP8266/esp8266.c <==
//单片机头文件
#include "stm32f10x.h"

//网络设备驱动
#include "esp8266.h"

//硬件驱动
#include "delay.h"
#include "usart.h"

//C库
#include <string.h>
#include <stdio.h>

#include <oled.h>
#include "iwdg.h"

#define ESP8266_WIFI_INFO		"AT+CWJAP=\"me_computer\",\"2960493425\"\r\n"

#define ESP8266_ONENET_INFO		"AT+CIPSTART=\"TCP\",\"183.230.40.39\",6002\r\n"
unsigned char esp8266_buf[256];
unsigned short esp8266_cnt = 0, esp8266_cntPre = 0;

extern u8 net_connect;

//==========================================================
//	函数名称：	ESP8266_Clear
//
//	函数功能：	清空缓存
//
//	入口参数：	无
//
//	返回参数：	无
//
//	说明：
//==========================================================
void ESP8266_Clear(void)
{

    memset(esp8266_buf, 0, sizeof(esp8266_buf));
    esp8266_cnt = 0;

}

//==========================================================
//	函数名称：	ESP8266_WaitRecive
//
//	函数功能：	等待接收完成
//
//	入口参数：	无
//
//	返回参数：	REV_OK-接收完成		REV_WAIT-接收超时未完成
//
//	说明：		循环调用检测是否接收完成
//==========================================================
_Bool ESP8266_WaitRecive(void)
{

    if(esp8266_cnt == 0) 							//如果接收计数为0 则说明没有处于接收数据中，所以直接跳出，结束函数
        return REV_WAIT;

    if(esp8266_cnt == esp8266_cntPre)				//如果上一次的值和这次相同，则说明接收完毕
    {
        esp8266_cnt = 0;							//清0接收计数

        return REV_OK;								//返回接收完成标志
    }

    esp8266_cntPre = esp8266_cnt;					//置为相同

    return REV_WAIT;								//返回接收未完成标志

}

//==========================================================
//	函数名称：	ESP8266_SendCmd
//
//	函数功能：	发送命令
//
//	入口参数：	cmd：命令
//				res：需要检查的返回指令
//
//	返回参数：	0-成功	1-失败
//
//	说明：
//==========================================================
_Bool ESP8266_SendCmd(char *cmd, char *res)
{

    unsigned char timeOut = 200;

    Usart_SendString(USART2, (unsigned char *)cmd, strlen((const char *)cmd));
    IWDG_Feed();
    while(timeOut--)
    {
        if(ESP8266_WaitRecive() == REV_OK)							//如果收到数据
        {
            if(strstr((const char *)esp8266_buf, res) != NULL)		//如果检索到关键词
            {
                ESP8266_Clear();									//清空缓存

                return 0;
            }
        }

        delay_ms(10);
    }

    return 1;

}

//==========================================================
//	函数名称：	ESP8266_SendData
//
//	函数功能：	发送数据
//
//	入口参数：	data：数据
//				len：长度
//
//	返回参数：	无
//
//	说明：
//==========================================================
void ESP8266_SendData(unsigned char *data, unsigned short len)
{

    char cmdBuf[32];

    ESP8266_Clear();								//清空接收缓存

    //先发送要发送数据的指令做准备
    sprintf(cmdBuf, "AT+CIPSEND=%d\r\n", len);		//发送命令
    if(!ESP8266_SendCmd(cmdBuf, ">"))				//收到‘>’时可以发送数据
    {
        //既然准备完毕即可开始发送数据
        Usart_SendString(USART2, data, len);		//发送设备连接请求数据
    }

}

//==========================================================
//	函数名称：	ESP8266_GetIPD
//
//	函数功能：	获取平台返回的数据
//
//	入口参数：	等待的时间(乘以10ms)
//
//	返回参数：	平台返回的原始数据
//
//	说明：		不同网络设备返回的格式不同，需要去调试
//				如ESP8266的返回格式为	"+IPD,x:yyy"	x代表数据长度，yyy是数据内容
//==========================================================
unsigned char *ESP8266_GetIPD(unsigned short timeOut)
{

    char *ptrIPD = NULL;

    do
    {
        if(ESP8266_WaitRecive() == REV_OK)								//如果接收完成
        {
            ptrIPD = strstr((char *)esp8266_buf, "IPD,");				//搜索“IPD”头
            if(ptrIPD == NULL)											//如果没找到，可能是IPD头的延迟，还是需要等待一会，但不会超过设定的时间
            {
                //UsartPrintf(USART_DEBUG, "\"IPD\" not found\r\n");
            }
            else
            {
                ptrIPD = strchr(ptrIPD, ':');							//找到':'
                if(ptrIPD != NULL)
                {
                    ptrIPD++;
                    return (unsigned char *)(ptrIPD);
                }
                else
                    return NULL;

            }
        }

        delay_ms(5);													//延时等待
    }
    while(timeOut--);

    return NULL;														//超时还未找到，返回空指针

}

//==========================================================
//	函数名称：	ESP8266_Init
//
//	函数功能：	初始化ESP8266
//
//	入口参数：	无
//
//	返回参数：	无
//
//	说明：
//==========================================================
void ESP8266_Init(void)
{
    int i;
    GPIO_InitTypeDef GPIO_Initure;

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);

    //ESP8266复位引脚
    GPIO_Initure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_Initure.GPIO_Pin = GPIO_Pin_13;					//GPIOC13-复位
    GPIO_Initure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOC, &GPIO_Initure);

    GPIO_WriteBit(GPIOC, GPIO_Pin_13, Bit_RESET);
    delay_ms(250);
    GPIO_WriteBit(GPIOC, GPIO_Pin_13, Bit_SET);
    delay_ms(500);

    ESP8266_Clear();

    OLED_Clear();//清屏

    OLED_ShowCHinese(20, 2, 5); //初始化中
    OLED_ShowCHinese(38, 2, 6);
    OLED_ShowCHinese(56, 2, 7);
    OLED_ShowCHinese(74, 2, 8);

    // 	UsartPrintf(USART_DEBUG, "1. AT\r\n");
    printf("1. AT\r\n");
    for(i = 0; i < 10; i++)
    {
        OLED_progress_bar(6, i);   //显示进度条
    }
    while(ESP8266_SendCmd("AT\r\n", "OK"))
        delay_ms(500);

    printf("2. CWMODE\r\n");
    for(i = 0; i < 20; i++)
    {
        OLED_progress_bar(6, i);   //显示进度条
    }

    while(ESP8266_SendCmd("AT+CWMODE=1\r\n", "OK"))
        delay_ms(500);

    printf( "3. AT+CWDHCP\r\n");
    for(i = 0; i < 30; i++)
    {
        OLED_progress_bar(6, i);   //显示进度条
    }

    while(ESP8266_SendCmd("AT+CWDHCP=1,1\r\n", "OK"))
        delay_ms(500);

    printf("4. CWJAP\r\n");
    for(i = 0; i < 40; i++)
    {
        OLED_progress_bar(6, i);   //显示进度条
    }

    while(ESP8266_SendCmd(ESP8266_WIFI_INFO, "GOT IP"))
        delay_ms(500);

    printf("5. CIPMUX\r\n");
    while(ESP8266_SendCmd("AT+CIPMUX=0\r\n", "OK"))
        delay_ms(500);

    printf( "6. CIPSTART\r\n");
    for(i = 0; i < 50; i++)
    {
        OLED_progress_bar(6, i);   //显示进度条
    }

    while(ESP8266_SendCmd(ESP8266_ONENET_INFO, "CONNECT"))
        delay_ms(500);


    printf("7. ESP8266 Init OK\r\n");
    OLED_Clear();
}

//==========================================================
//	函数名称：	USART2_IRQHandler
//
//	函数功能：	串口2收发中断
//
//	入口参数：	无
//
//	返回参数：	无
//
//	说明：
//==========================================================
void USART2_IRQHandler(void)
{

    if(USART_GetITStatus(USART2, USART_IT_RXNE) != RESET) //接收中断
    {
        if(esp8266_cnt >= sizeof(esp8266_buf))	esp8266_cnt = 0; //防止串口被刷爆
        esp8266_buf[esp8266_cnt++] = USART2->DR;
        USART1->DR = esp8266_buf[esp8266_cnt-1];
        
        if(net_connect == 1)
        {
            if(strstr((const char *)esp8266_buf, "link is not valid") != NULL)		//如果检索到关键词
            {
                ESP8266_Clear();									//清空缓存
                printf("Interrr error ============!\r\n");
                net_connect = 0;
            }
        }
        
        
        USART_ClearFlag(USART2, USART_FLAG_RXNE);
    }

}
